--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <div class="header__burger">
       <span></span>
     </div>
-
     <nav class="header__menu">
       <ul class="menu list">
         <li class="menu__item"><a href="#" class="menu__link link">Home</a></li>
@@ -63,7 +62,7 @@
           <div class="top-news__text">
             <h2 class="top-news__number">01</h2>
             <a href="" class="top-news__heading link">Reviving Retro PCs</a>
-            <p class="top-news__paragraph">What happens when old PCs are given modern upgrades?</p>
+            <p class="paragraph">What happens when old PCs are given modern upgrades?</p>
           </div>
         </li>
         <li class="top-news__item">
@@ -71,7 +70,7 @@
           <div class="top-news__text">
             <h2 class="top-news__number">02</h2>
             <a href="" class="top-news__heading link">Top 10 Laptops of 2022</a>
-            <p class="top-news__paragraph">Our best picks for various needs and budgets.</p>
+            <p class="paragraph">Our best picks for various needs and budgets.</p>
           </div>
         </li>
         <li class="top-news__item">
@@ -79,7 +78,7 @@
           <div class="top-news__text">
             <h2 class="top-news__number">03</h2>
             <a href="" class="top-news__heading link">The Growth of Gaming</a>
-            <p class="top-news__paragraph">How the pandemic has sparked fresh opportunities.</p>
+            <p class="paragraph">How the pandemic has sparked fresh opportunities.</p>
           </div>
         </li>
       </ul>
